oop example added

--- a/Python/OOP/Inheritance.ipynb
+++ b/Python/OOP/Inheritance.ipynb
@@ -361,15 +361,253 @@
     "###### Attributes and Methods can be accessed from whitin the class and subcalsses \n",
     "###### Attributes and Methods prefixed with one __Underscore__ _\n",
     "###### __Private__:\n",
-    "###### Attributes and Methods can be accessed from within the class or object only\n",
+    "###### Attributes and Methods can be accessed from within the class or object from that class only\n",
     "###### Attributes cannot be modified from outside the class \n",
     "###### Attributes and Methods prefixed with two __Underscore__ __"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ahmed\n",
+      "Ahmed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class Member:\n",
+    "\n",
+    "#   def __init__(self, name):\n",
+    "\n",
+    "#     self.name = name  # Public\n",
+    "\n",
+    "# one = Member(\"Ahmed\")\n",
+    "# print(one.name)\n",
+    "# one.name = \"Sayed\"\n",
+    "# print(one.name)\n",
+    "\n",
+    "# class Member:\n",
+    "\n",
+    "#   def __init__(self, name):\n",
+    "\n",
+    "#     self._name = name  # Protected\n",
+    "\n",
+    "# one = Member(\"Ahmed\")\n",
+    "# print(one._name) # we notice when we put . _name it will not be shown \n",
+    "## but if we write the _name it will be printed because in python we dont have \n",
+    "## real restriction Its just write method between developers.\n",
+    "## we can even edit the protected attribute!\n",
+    "# one._name = \"Sayed\"\n",
+    "# print(one._name)\n",
+    "\n",
+    "class Member:\n",
+    "\n",
+    "  def __init__(self, name):\n",
+    "\n",
+    "    self.__name = name  # Private\n",
+    "\n",
+    "  def say_hello(self):\n",
+    "\n",
+    "    return f\"Hello {self.__name}\"\n",
+    "\n",
+    "one = Member(\"Ahmed\")\n",
+    "#Here we will get error with __name because its private \n",
+    "# print(one.__name)\n",
+    "# we can access within the class \n",
+    "# In say_hello() method we have inside the private value.\n",
+    "print(one.say_hello())\n",
+    "# Unfortunately we can access even the private member using the following method\n",
+    "print(one._Member__name) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### __Getters & Setters:__\n",
+    "###### - We can get access to the private attribute of a class and eiditing using the __Setter & Getter Properties__.\n",
+    "###### - The reason for this cause I got full access to all my members within my class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sayed\n",
+      "Sayed\n",
+      "Abbas\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Member:\n",
+    "\n",
+    "  def __init__(self, name):\n",
+    "\n",
+    "    self.__name = name  # Private\n",
+    "\n",
+    "  def say_hello(self):\n",
+    "\n",
+    "    return f\"Hello {self.__name}\"\n",
+    "\n",
+    "  def get_name(self):  # Getter\n",
+    "\n",
+    "    return self.__name\n",
+    "\n",
+    "  def set_name(self, new_name): # Setter\n",
+    "\n",
+    "    self.__name = new_name\n",
+    "\n",
+    "one = Member(\"Ahmed\")\n",
+    "# We cant edit the value of a private attribute but using the following value:\n",
+    "one._Member__name = \"Sayed\"# Here we can edit as we can get access\n",
+    "print(one._Member__name)\n",
+    "# The official Way to get access and edit a private member is\n",
+    "# The get and set properties.\n",
+    "print(one.get_name()) # here we get access to the name (private member)\n",
+    "one.set_name('Abbas') # here we can edit the name (private member)\n",
+    "print(one.get_name())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __@Property Decorator__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ahmed\n",
+      "40\n",
+      "Hello Ahmed\n",
+      "14600\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Member:\n",
+    "\n",
+    "    def __init__(self, name, age):\n",
+    "\n",
+    "        self.name = name\n",
+    "\n",
+    "        self.age = age\n",
+    "\n",
+    "    def say_hello(self):\n",
+    "\n",
+    "        return f\"Hello {self.name}\"\n",
+    "# We notice here that my method does not require any parameters(just self)\n",
+    "# So we can make a property and can call it without the ()\n",
+    "    @property\n",
+    "    def age_in_days(self):\n",
+    "\n",
+    "        return self.age * 365\n",
+    "\n",
+    "one = Member(\"Ahmed\", 40)\n",
+    "\n",
+    "print(one.name)\n",
+    "print(one.age)\n",
+    "print(one.say_hello())\n",
+    "# print(one.age_in_days())\n",
+    "\n",
+    "print(one.age_in_days)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Abstract Base Class:__\n",
+    "###### - Abstract class prevents from creating an object of that class.\n",
+    "###### - compels a user to override abstract methods in a child class.\n",
+    "###### - Which means  the superclass forces the children classes override its abstract method.\n",
+    "###### - Abstract class is a class which contains one or more abstract methods.\n",
+    "###### - Abstract method is a method that has a declaration but does not have an implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Abstract classes and methods are not supported in python so we need to \n",
+    "# import ABSMeta(ABS),abstractclassmethod frpm abc(abstract base class)\n",
+    "from abc import ABCMeta, abstractclassmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n",
+      "Pascal\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABCMeta, abstractmethod\n",
+    "\n",
+    "class Programming(metaclass=ABCMeta):# Here I specified that my class is abstract \n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def has_oop(self):\n",
+    "\n",
+    "        pass # This is a use of pass in the abstract method!\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def has_name(self):\n",
+    "\n",
+    "        pass # Abstract method does not do anything!\n",
+    "\n",
+    "class Python(Programming):\n",
+    "\n",
+    "    def has_oop(self):\n",
+    "\n",
+    "        return \"Yes\"\n",
+    "\n",
+    "class Pascal(Programming):\n",
+    "\n",
+    "    def has_oop(self):\n",
+    "\n",
+    "        return \"No\"\n",
+    "\n",
+    "    def has_name(self):\n",
+    "\n",
+    "        return \"Pascal\"\n",
+    "\n",
+    "one = Pascal()\n",
+    "# two = Python()\n",
+    "# print(Python.has_oop()) # Here we will get error cause we overrided has_oop \n",
+    "# but not has_name(Abstract class forces us to override all its abstract methods)\n",
+    "# Even we cant define an obeject before overriding all abstract methods.\n",
+    "print(one.has_oop())\n",
+    "print(one.has_name())"
+   ]
   }
  ],
  "metadata": {
