--- a/Python/regex/regular_expression.ipynb
+++ b/Python/regex/regular_expression.ipynb
@@ -326,6 +326,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[google](http://google.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
