--- a/Python/Modules/Pillow.ipynb
+++ b/Python/Modules/Pillow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# Define the region to crop (left, upper, right, lower)\\nleft = 100\\nupper = 100\\nright = 300\\nlower = 300\\nleft: The x-coordinate of the left edge of the rectangular region.\\nupper: The y-coordinate of the upper edge of the rectangular region.\\nright: The x-coordinate of the right edge of the rectangular region.\\nlower: The y-coordinate of the lower edge of the rectangular region.\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# My cropped image \n",
     "myBox=(0,0,400,400) # how many pixels at each point!\n",
@@ -82,7 +93,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
