--- a/Python/OOP/class&static&magicMethod.ipynb
+++ b/Python/OOP/class&static&magicMethod.ipynb
@@ -294,6 +294,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Notice__:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The object describe was printed from __str__ method\n",
+      "The object describe was printed from __repr__ method\n",
+      "The object describe was printed from __str__ method\n",
+      "##############################\n",
+      "The object describe was printed from __repr__ method\n",
+      "The object describe was printed from __str__ method\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Just Notice when we have __repr__ & __str__ defined\n",
+    "# When we print the object we will get the __str__ method\n",
+    "# When we got only the __repr__ method and we print the object then we will get the repr describe\n",
+    "# when we have both we still have the access to the __repr__  using repr() built in function\n",
+    "class Skill:\n",
+    "    def __init__(self):\n",
+    "        self.skill=[\"HTML\",\"CSS\",\"JS\"]\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"The object describe was printed from __repr__ method\"\n",
+    "    def __str__(self):\n",
+    "        return f\"The object describe was printed from __str__ method\"\n",
+    "skill=Skill()\n",
+    "print(skill) \n",
+    "print(repr(skill))\n",
+    "print(str(skill))\n",
+    "#########################################\n",
+    "print(\"#\"*30)\n",
+    "print(skill.__repr__())\n",
+    "print(skill.__str__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "ba\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dunder add => __add__\n",
+    "print(1+2)                  \n",
+    "print(int.__add__(1,2))\n",
+    "# String as well use dunder add \n",
+    "print(str.__add__(\"b\",\"a\"))\n",
+    "\n",
+    "\n",
+    "# Dunder len => __len__\n",
+    "print(len(\"test\"))\n",
+    "print(\"Test\".__len__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11000\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can use __add__ to do sth else:\n",
+    "class Employee:\n",
+    "    def __init__(self,fullName,pay):\n",
+    "        self.fullName=fullName\n",
+    "        self.pay=pay\n",
+    "        \n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"The object describe was printed from __repr__ method\"\n",
+    "    def __str__(self):\n",
+    "        return f\"The object describe was printed from __str__ method\"\n",
+    "    def __add__(self,other):\n",
+    "        return self.pay+other.pay\n",
+    "    def __len__(self):\n",
+    "        return len(self.fullName)\n",
+    "emp1=Employee(\"Bakri Badet\",5000)\n",
+    "emp2=Employee(\"Omar Sakalaik\",6000)\n",
+    "print(emp1+emp2)   \n",
+    "#Whenever we use + in python will look for __add__ method in my class and what is defined in it.\n",
+    "print(len(emp1))\n",
+    "#Whenever we use len() in python will look for __len__ method in my class and what is defined in it\n",
+    " \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
