--- a/Python/Database/SQLite/Database.ipynb
+++ b/Python/Database/SQLite/Database.ipynb
@@ -139,6 +139,207 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Full Example with some tricks\n",
+    "import sqlite3\n",
+    "def get_all_data():\n",
+    "\n",
+    "    try:\n",
+    "        # Connect to Database\n",
+    "        db=sqlite3.connect(\"app.db\")\n",
+    "        # Print Success Message\n",
+    "        print(\"Connected to Database Successfully\")\n",
+    "        # Setting up the Cursor\n",
+    "        cr =db.cursor()\n",
+    "        # Fetch Data From Database\n",
+    "        cr.execute(\"SELECT * FROM users\")\n",
+    "        # Assign Data to Variable\n",
+    "        results = cr.fetchall()  # Notice that every row is a tuple\n",
+    "\n",
+    "        # Print Number of rows\n",
+    "        print(f\"Database has {len(results)} Rows \")\n",
+    "\n",
+    "        # Printing Message \n",
+    "        print(\"Showing Data:\")\n",
+    "\n",
+    "        # Loop on Results\n",
+    "        for row in results:\n",
+    "            print(f\"UserID   => {row[0]}\", end=\" \")\n",
+    "            print(f\"Username => {row[1]}\")\n",
+    "        \n",
+    "    except sqlite3.Error as  er:\n",
+    "        print(f\"Error Reading Data {er}\")\n",
+    "    \n",
+    "    finally:\n",
+    "        if(db):  # If it was a connection to the database => True\n",
+    "        # close database connection\n",
+    "            db.close()  \n",
+    "            print(\"Connection to Database is closed!\")\n",
+    "        \n",
+    "\n",
+    "get_all_data()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Update & Delete Data From Database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "# connect to database if not exists create\n",
+    "db=sqlite3.connect(\"app.db\")\n",
+    "# Setting up the cursor\n",
+    "cr=db.cursor()\n",
+    "\n",
+    "# Update Data \n",
+    "# Be careful with update statements cause if we dont specify the row will update the entire column\n",
+    "cr.execute(\"update users set name= 'Bakri' where user_id=1\")\n",
+    "cr.execute(\"update users set name= 'Jana' where user_id=2\")\n",
+    "cr.execute(\"update users set name= 'Koko' where user_id=3\")\n",
+    "\n",
+    "# Delete Data \n",
+    "# Delete the eighth row from the users table\n",
+    "cr.execute(\"delete from users where user_id=8\")\n",
+    "\n",
+    "cr.execute(\"select * from users\")\n",
+    "print(cr.fetchall()) # List of tuples of every row\n",
+    "\n",
+    "db.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create Skills App:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Import SQLite Module\n",
+    "db=sqlite3.connect(\"app.db\")  # Connect to the database \n",
+    "cr= db.cursor() # Global Variable so we can use inside the method\n",
+    "# My User ID\n",
+    "uid=1\n",
+    "\n",
+    "def commit_and_close():\n",
+    "    # Save (Commit) Changes \n",
+    "    db.commit()\n",
+    "    # close database \n",
+    "    db.close()\n",
+    "    print(\"Connection to database is closed!\")\n",
+    "\n",
+    "\n",
+    "input_message='''What Do you want to Do?\n",
+    "\"s\" => Show All Skills\n",
+    "\"a\" => Add new Skill\n",
+    "\"d\" => Delete A Skill\n",
+    "\"u\" => Update Skill Progress\n",
+    "\"q\" => Quit the App\n",
+    "Choose Option:\n",
+    "'''\n",
+    "# Input Option choose\n",
+    "user_input=input(input_message).strip()\n",
+    "\n",
+    "# Command List\n",
+    "commands_list=[\"s\",\"a\",\"d\",\"u\",\"q\"]\n",
+    "\n",
+    "# Setup the methods\n",
+    "def show_skills():\n",
+    "    cr.execute(\"select * from skills\")\n",
+    "    results=cr.fetchall()\n",
+    "    print(f\"You have {len(results)} Skills.\")\n",
+    "    if (len(results)>0):\n",
+    "        print(\"The Skills and Progresses:\")\n",
+    "    for row in results:\n",
+    "        print(f\"Skill => {row[0]}, Progress => {row[1]}%\")\n",
+    "    commit_and_close()\n",
+    "\n",
+    "\n",
+    "def add_skill():\n",
+    "    sk=input(\"Write Skill Name:\").strip().capitalize()\n",
+    "    prog=input(\"Write Skill Progress:\").strip()\n",
+    "    cr.execute(f\"insert into skills(name, progress, user_id) values ('{sk}',{prog},{uid})\")\n",
+    "    commit_and_close()\n",
+    "\n",
+    "\n",
+    "def delete_skill():\n",
+    "    sk=input(\"Write Skill Name:\").strip().capitalize()\n",
+    "    cr.execute(\"delete from skills where name='{sk}' and user_id=1\")\n",
+    "    commit_and_close()\n",
+    "\n",
+    "\n",
+    "def update_skill():\n",
+    "    sk=input(\"Write Skill Name You want to update:\").strip().capitalize()\n",
+    "    new_prog=input(\"Write The new Skill Progress:\").strip()\n",
+    "    cr.execute(f\"update skills set progress ='{new_prog}' where name='{sk}' and user_id='{uid}'\")\n",
+    "    commit_and_close()\n",
+    "\n",
+    "# Check if command is exists\n",
+    "if user_input in commands_list:\n",
+    "    # print(f\"Command found: '{user_input}'\")\n",
+    "    if user_input==\"s\":\n",
+    "        show_skills()\n",
+    "    elif user_input==\"a\":\n",
+    "        add_skill()\n",
+    "    elif user_input==\"d\":\n",
+    "        delete_skill()\n",
+    "    elif user_input==\"u\":\n",
+    "        update_skill()\n",
+    "    else:\n",
+    "        print(\"App is closed!\")\n",
+    "        commit_and_close()\n",
+    "else:\n",
+    "    print(f\"Sorry This Command '{user_input}' Is Not Found !\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Some Tricks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "db=sqlite3.connect(\"app.db\")\n",
+    "cr= db.cursor()\n",
+    "# Notice that the next two lines are equla I dont have to specify the columns when\n",
+    "# I insert to all columns\n",
+    "cr.execute(\"insert into skills values('Pascal',88,2)\")\n",
+    "cr.execute(\"insert into skills(name,progress, user_id) values('Pascal',88,2)\")\n",
+    "\n",
+    "# We can use a place holder to my data \n",
+    "my_tuple=('Java',20,1)\n",
+    "cr.execute(\"insert into skills values(?,?,?)\", my_tuple)\n",
+    "# The Value in my_tuple(second arg) will be filled into (?,?,?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
