--- a/Python/Basics/Decoraters.ipynb
+++ b/Python/Basics/Decoraters.ipynb
@@ -355,9 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "display function ran\n"
+     ]
+    }
+   ],
    "source": [
     "def deco_f(original_f):\n",
     "    def wrapper_function():\n",
@@ -371,9 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is Bakri and my age is 31\n"
+     ]
+    }
+   ],
    "source": [
     "# What if I want to add arguments to my function that wanted to be decorated\n",
     "# Best Practise: => Use *args & **kwargs (0 or many args)\n",
